// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoTooltip renders an info button with a label if available 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-infoTooltipContainer"
  >
    <span
      data-testid="info-button-label"
    >
      Label text
    </span>
    <button
      class="PodBrowser-root PodBrowser-root PodBrowser-infoButton PodBrowser-text"
      tabindex="0"
      title="example tooltip text"
      type="button"
    >
      <span
        class="PodBrowser-label"
      >
        <i
          aria-label="Info"
          class="PodBrowser-icon-info PodBrowser-infoIcon"
        />
      </span>
      <span
        class="PodBrowser-root"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`InfoTooltip renders an info button with a tooltip 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-infoTooltipContainer"
  >
    <button
      class="PodBrowser-root PodBrowser-root PodBrowser-infoButton PodBrowser-text"
      tabindex="0"
      title="example tooltip text"
      type="button"
    >
      <span
        class="PodBrowser-label"
      >
        <i
          aria-label="Info"
          class="PodBrowser-icon-info PodBrowser-infoIcon"
        />
      </span>
      <span
        class="PodBrowser-root"
      />
    </button>
  </div>
</DocumentFragment>
`;
